<resources>
    <string name="app_name">CulinaryCompanion</string>

    <!-- Main -->
    <string name="app_logo_description">App logo</string>

    <string name="welcome_message">Welcome,\n{user name}\nto your Culinary Companion</string>
    <string name="add_button">+ ADD</string>
    <string name="view_button">≡ VIEW</string>
    <string name="search_button">Search</string>

    <!-- Add recipe -->
    <string name="cancel">Cancel</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_name_hint">e.g. Musacka, Tacos</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_hint">e.g. 1 egg, 1 cup flour</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_hint">e.g. mix until smooth texture</string>
    <string name="category">Category</string>
    <string name="save">SAVE</string>
    <string name="update">Update</string>

    <string-array name="recipe_categories">
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Desserts</item>
        <item>Other</item>
    </string-array>

    <!-- View categories -->
    <string name="view_categories">View Categories</string>
    <string name="breakfast">Breakfast</string>
    <string name="brunch">Brunch</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="dessert">Dessert</string>
    <string name="others">Others</string>

    <string name="breakfast_icon_desc">Breakfast icon</string>
    <string name="brunch_icon_desc">Brunch icon</string>
    <string name="lunch_icon_desc">Lunch icon</string>
    <string name="dinner_icon_desc">Dinner icon</string>
    <string name="dessert_icon_desc">Dessert icon</string>
    <string name="others_icon_desc">Others icon</string>

    <string name="empty_hint">No recipes yet</string>

    <!-- List categories -->
    <string name="breakfast_title">BREAKFAST</string>
    <string name="brunch_title">BRUNCH</string>
    <string name="lunch_title">LUNCH</string>
    <string name="dinner_title">DINNER</string>
    <string name="dessert_title">DESSERT</string>
    <string name="others_title">OTHERS</string>

    <!-- Recipe -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="recipe_list_desc">List of recipes</string>

    <!-- Navigation -->
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="back">&lt;-</string>

    <!-- additional buttons -->
    <string name="recipe_title_placeholder">Recipe {Name}</string>
    <string name="ingredients_placeholder">List of ingredients here…</string>
    <string name="instructions_placeholder">Recipe instructions go here…</string>
</resources>